Fixed errors
Fixed some syntax errors that could end up being bad.